OperatingSystem-Services/Service-Containers/Kubernetes/Projects/nginx-ingress-example/web-app-ingress-example.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: web-app.home-k8s.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-app
            port:
              number: 80
